# scPerturb

./: .gitignore  Fig3AC.ipynb  LICENSE  README.md  config.yaml  requirements.txt  sc_env.yaml  utils.py
Dataset_Processing/: ChangYe2021.py  ReplogleWeissman2022.py  XieHon2017.py  piecharts_final.ipynb  quality_control_JS.ipynb
configuration/: config.yaml
dataset_processing/: DatlingerBock2021.py  DixitRegev2016.py  GehringPachter2019.py  JoungZhang2023.ipynb  McFalineTrapnell2023.ipynb  QinTape2023.ipynb  SchiebingerLander2019.py  SchraivogelSteinmetz2020.py  data_access_and_preprocessing_JS.ipynb  data_processing_JS.ipynb  dset.py  piecharts_final.ipynb  process_supp.py
environments/: r_env.yaml
metadata/: GSE148842_manual_annotation.xlsx  HMD_HumanPhenotype.rpt  drugnames_raw_180822.csv  publicly_available_singlecell_perturbation_data_25072022.csv  publicly_available_singlecell_perturbation_datasets_180822.xlsx  scperturb_dataset_info.csv  scperturb_dataset_info.xlsx  scperturb_dataset_info_180822.xlsx
notebooks/: Fig2.ipynb  Fig3-updated.ipynb  Fig3.ipynb  Fig4-updated-revision.ipynb  Fig4-updated.ipynb  Fig4.ipynb  PBMC_comparison.ipynb  add_chembl.ipynb  piecharts_final.ipynb  website_figures_tables.ipynb
package/: LICENSE  README.md  setup.cfg
package/dev/: profile_mem.py
package/notebooks/: e-distance.ipynb  scperturbr.ipynb
package/src/scperturb/: __init__.py  edistance.py  etest.py  utils.py
package_r/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cran-comments.md  scperturbr.R
snakemake/: Snakefile  (+1 more)
(+737 files in other folders)
