[metadata]
name = scperturb
version = 0.0.1
author = Stefan Peidli
author_email = stefanpeidli@gmail.com
description = Python package with E-distance tools for single-cell perturbation data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sanderlab/scPerturb
project_urls =
    Bug Tracker = https://github.com/sanderlab/scPerturb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.6
install_requires =
    pandas>=1.1.3
    scanpy>=1.7.2
    tqdm>=4.62.3
    numpy
    scipy
    scikit-learn
    statsmodels
include_package_data = True

[options.packages.find]
where = src
